--- a/app/src/main/res/layout/exercise_log.xml
+++ b/app/src/main/res/layout/exercise_log.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#005EB8"
-    tools:context=".MedLog">
+    tools:context=".ExerciseLog">
 
     <ImageView
         android:id="@+id/logoView"
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="44dp"
-        android:text="Medication"
+        android:text="Exercise Log"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
@@ -44,7 +44,8 @@
         android:layout_marginTop="48dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
-        android:hint="Type of medication"
+        android:hint="Type of exercise"
+        android:textAlignment="center"
         android:inputType="text"
         android:padding="15dp"
         android:textColor="#000000"
@@ -60,12 +61,13 @@
 
 
     <EditText
-        android:id="@+id/doseField"
+        android:id="@+id/durationField"
         android:layout_width="270dp"
         android:layout_height="50dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
-        android:hint="Dose"
+        android:hint="Duration"
+        android:textAlignment="center"
         android:inputType="text"
         android:padding="15dp"
         android:textColor="#000000"
@@ -86,6 +88,7 @@
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Date and Time"
+        android:textAlignment="center"
         android:inputType="datetime"
         android:padding="15dp"
         android:textColor="#000000"
