--- a/app/src/main/res/layout/extranotes.xml
+++ b/app/src/main/res/layout/extranotes.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#005EB8"
-    tools:context=".MedLog">
+    tools:context=".ExtraNotes">
 
     <ImageView
         android:id="@+id/logoView"
@@ -14,7 +14,8 @@
         android:layout_marginStart="28dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintEnd_toStartOf="@+id/typeNotes"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.046"
@@ -25,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="44dp"
-        android:text="Medication"
+        android:text="Extra Notes"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
@@ -38,13 +39,12 @@
         app:layout_constraintVertical_bias="0.077" />
 
     <EditText
-        android:id="@+id/typeField"
+        android:id="@+id/typeNotes"
         android:layout_width="270dp"
-        android:layout_height="50dp"
+        android:layout_height="150dp"
         android:layout_marginTop="48dp"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/largetextbox"
         android:backgroundTint="#FFFFFF"
-        android:hint="Type of medication"
         android:inputType="text"
         android:padding="15dp"
         android:textColor="#000000"
@@ -58,26 +58,6 @@
         app:layout_constraintVertical_bias="0.017"
         tools:ignore="MissingConstraints" />
 
-
-    <EditText
-        android:id="@+id/doseField"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="#FFFFFF"
-        android:hint="Dose"
-        android:inputType="text"
-        android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/dateTimeField"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/typeField"
-        tools:ignore="MissingConstraints" />
-
     <EditText
         android:id="@+id/dateTimeField"
         android:layout_width="270dp"
@@ -86,6 +66,7 @@
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Date and Time"
+        android:textAlignment="center"
         android:inputType="datetime"
         android:padding="15dp"
         android:textColor="#000000"
@@ -138,6 +119,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.814" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
