Blood Sugar page with date and time picker

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -45,7 +45,7 @@
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint=" Εmail"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:padding="15dp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
@@ -63,8 +63,8 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
-        android:hint=" Password"
-        android:inputType="textPersonName"
+        android:hint="Password"
+        android:inputType="textPassword"
         android:padding="15dp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
