--- a/app/src/main/res/layout/signup2.xml
+++ b/app/src/main/res/layout/signup2.xml
@@ -45,7 +45,7 @@
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Type of Diabetes"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:padding="15dp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
@@ -66,7 +66,7 @@
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Type of Insulin"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:padding="15dp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
@@ -87,7 +87,7 @@
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Insulin Administration"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:padding="15dp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
@@ -108,7 +108,7 @@
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Email of Doctor"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:padding="15dp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
@@ -129,7 +129,7 @@
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Phone Number of Doctor"
-        android:inputType="textPersonName"
+        android:inputType="phone"
         android:padding="15dp"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
