--- a/app/src/main/res/layout/bloodsugar.xml
+++ b/app/src/main/res/layout/bloodsugar.xml
@@ -32,7 +32,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintHorizontal_bias="0.859"
         app:layout_constraintStart_toEndOf="@+id/logoView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077" />
@@ -50,17 +50,19 @@
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
+        app:layout_constraintVertical_bias="0.008"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/datePick"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="44dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Date"
@@ -68,19 +70,17 @@
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sugarField"
-        app:layout_constraintVertical_bias="0.056"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/timePick"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Time"
@@ -88,33 +88,71 @@
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/datePick"
-        app:layout_constraintVertical_bias="0.056"
+        app:layout_constraintVertical_bias="0.139"
         tools:ignore="MissingConstraints" />
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/hourSwitch"
+        android:theme="@style/SwitchCompatStyle"
+        android:checked="false"
+        android:layout_width="249dp"
+        android:layout_height="63dp"
+        android:text="Have you eaten in the last 2 hours?"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/cancelBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timePick"
+        app:layout_constraintVertical_bias="0.5" />
+
     <Button
-        android:id="@+id/LoginBtn"
-        android:layout_width="270dp"
-        android:layout_height="70dp"
+        android:id="@+id/saveBtn"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#2DE160"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
-        android:text="Login"
-        android:textSize="20dp"
+        android:text="Save"
+        android:textSize="15dp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.88"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.895" />
+        app:layout_constraintVertical_bias="0.891" />
+
+    <Button
+        android:id="@+id/cancelBtn"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="32dp"
+        android:background="@drawable/roundbutton"
+        android:backgroundTint="#FF0909"
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:text="Cancel"
+        android:textSize="15dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/timePick"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.891" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
