--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,8 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    <style name="SwitchCompatStyle" >
+        <item name="thumbTint">#FFFFFF</item>
+        <item name="trackTint">@drawable/switch_color_track</item>
+    </style>
 </resources>
