updated questionnaire new pages (unfinished) - log menu, questionnaire, settings, profile details updated - colors

--- a/app/src/main/res/layout/profile_details.xml
+++ b/app/src/main/res/layout/profile_details.xml
@@ -160,11 +160,12 @@
                     android:backgroundTint="#2DE160"
                     android:bottomLeftRadius="10dp"
                     android:bottomRightRadius="10dp"
-
                     android:text="SAVE CHANGES"
                     android:textSize="20dp"
                     android:topLeftRadius="10dp"
-                    android:topRightRadius="10dp" />
+                    android:topRightRadius="10dp"
+                    android:layout_marginStart="81dp"
+                    android:layout_marginEnd="81dp" />
 
                 <Space
                     android:layout_width="match_parent"
@@ -181,7 +182,9 @@
                     android:text="CANCEL"
                     android:textSize="20dp"
                     android:topLeftRadius="10dp"
-                    android:topRightRadius="10dp" />
+                    android:topRightRadius="10dp"
+                    android:layout_marginStart="81dp"
+                    android:layout_marginEnd="81dp" />
 
             </LinearLayout>
         </ScrollView>
