--- a/app/src/main/res/layout/questoinnaire.xml
+++ b/app/src/main/res/layout/questoinnaire.xml
@@ -36,118 +36,238 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077" />
 
-    <TextView
-        android:id="@+id/Symp1View"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="Symptom 1"
-        android:textAlignment="center"
-        android:textColor="@color/colorNeutralWhite"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/logoView" />
-
-    <TextView
-        android:id="@+id/Symp1ValuesView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="  1            2            3            4            5 "
-        android:textColor="@color/colorNeutralPaleGray"
-        android:textSize="26dp"
-        app:layout_constraintTop_toBottomOf="@+id/Symp1View" />
-
-    <SeekBar
-        android:id="@+id/seekBar1"
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
-        android:layout_width="380dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralPaleGray"
-        android:max="4"
-        android:progress="2"
+    <LinearLayout
+        android:layout_width="360dp"
+        android:layout_height="580dp"
+        android:orientation="vertical"
+        android:layout_marginBottom="28dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Symp1ValuesView" />
+        app:layout_constraintTop_toBottomOf="@+id/logoView"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <TextView
-        android:id="@+id/Symp2View"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:text="Symptom 2"
-        android:textAlignment="center"
-        android:textColor="@color/colorNeutralWhite"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar1" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/Symp2ValuesView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="  1            2            3            4            5 "
-        android:textColor="@color/colorNeutralPaleGray"
-        android:textSize="26dp"
-        app:layout_constraintTop_toBottomOf="@+id/Symp2View" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-    <SeekBar
-        android:id="@+id/seekBar2"
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
-        android:layout_width="380dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralPaleGray"
-        android:max="4"
-        android:progress="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Symp2ValuesView" />
+                <TextView
+                    android:id="@+id/Symp1View"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Symptom 1"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorNeutralWhite"
+                    android:textSize="26dp"
+                    android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/Symp3View"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:text="Symptom 3"
-        android:textAlignment="center"
-        android:textColor="@color/colorNeutralWhite"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+                <TextView
+                    android:id="@+id/Symp1ValuesView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="1           2           3           4           5"
+                    android:textColor="@color/colorNeutralPaleGray"
+                    android:textSize="26dp"
+                    app:layout_constraintTop_toBottomOf="@+id/Symp1View" />
 
-    <TextView
-        android:id="@+id/Symp3ValuesView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="  1            2            3            4            5 "
-        android:textColor="@color/colorNeutralPaleGray"
-        android:textSize="26dp"
-        app:layout_constraintTop_toBottomOf="@+id/Symp3View" />
+                <SeekBar
+                    android:id="@+id/seekBar1"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:layout_marginTop="4dp"
+                    android:background="@drawable/roundbutton"
+                    android:backgroundTint="@color/colorNeutralPaleGray"
+                    android:max="4"
+                    android:progress="2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/Symp1ValuesView" />
 
-    <SeekBar
-        android:id="@+id/seekBar3"
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
-        android:layout_width="380dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralPaleGray"
-        android:max="4"
-        android:progress="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Symp3ValuesView" />
+                <TextView
+                    android:id="@+id/Symp2View"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="30dp"
+                    android:text="Symptom 2"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorNeutralWhite"
+                    android:textSize="26dp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@+id/seekBar1" />
+
+                <TextView
+                    android:id="@+id/Symp2ValuesView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="1           2           3           4           5"
+                    android:textColor="@color/colorNeutralPaleGray"
+                    android:textSize="26dp"
+                    app:layout_constraintTop_toBottomOf="@+id/Symp2View" />
+
+                <SeekBar
+                    android:id="@+id/seekBar2"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:layout_marginTop="4dp"
+                    android:background="@drawable/roundbutton"
+                    android:backgroundTint="@color/colorNeutralPaleGray"
+                    android:max="4"
+                    android:progress="2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/Symp2ValuesView" />
+
+                <TextView
+                    android:id="@+id/Symp3View"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="30dp"
+                    android:text="Symptom 3"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorNeutralWhite"
+                    android:textSize="26dp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+
+                <TextView
+                    android:id="@+id/Symp3ValuesView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="1           2           3           4           5"
+                    android:textColor="@color/colorNeutralPaleGray"
+                    android:textSize="26dp"
+                    app:layout_constraintTop_toBottomOf="@+id/Symp3View" />
+
+                <SeekBar
+                    android:id="@+id/seekBar3"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:layout_marginTop="4dp"
+                    android:background="@drawable/roundbutton"
+                    android:backgroundTint="@color/colorNeutralPaleGray"
+                    android:max="4"
+                    android:progress="2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/Symp3ValuesView" />
+
+                <TextView
+                    android:id="@+id/SympNotesView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="30dp"
+                    android:text="Any other symptoms"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorNeutralWhite"
+                    android:textSize="26dp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
+
+                <EditText
+                    android:id="@+id/typeSympNotes"
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"
+                    android:layout_marginTop="4dp"
+                    android:background="@drawable/roundbutton"
+                    android:backgroundTint="@color/colorNeutralWhite"
+                    android:inputType="text"
+                    android:textColor="#000000"
+                    android:textColorHighlight="#000000"
+                    android:textColorHint="#000000"
+                    app:layout_constraintTop_toBottomOf="@+id/SympNotesView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/DateTimeView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="30dp"
+                    android:text="Date and Time"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorNeutralWhite"
+                    android:textSize="26dp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@+id/typeSympNotes" />
+
+                <DatePicker
+                    android:id="@+id/simpleDatePicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/DateTimeView" />
+                <!--android:datePickerMode="spinner"-->
+
+                <TimePicker
+                    android:id="@+id/simpleTimePicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    />
+                <!--android:timePickerMode="spinner"-->
+
+                <Button
+                    android:id="@+id/SaveBtn"
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/roundbutton"
+                    android:backgroundTint="#2DE160"
+                    android:text="Save"
+                    android:textSize="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/simpleTimePicker"
+                    android:layout_marginStart="90dp"
+                    android:layout_marginEnd="90dp"
+                    android:layout_marginTop="20dp" />
+
+                <Button
+                    android:id="@+id/CancelBtn"
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/roundbutton"
+                    android:backgroundTint="#782121"
+                    android:text="Cancel"
+                    android:textSize="20dp"
+                    android:textColor="@color/colorNeutralWhite"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/SaveBtn"
+                    android:layout_marginStart="90dp"
+                    android:layout_marginEnd="90dp"
+                    android:layout_marginTop="20dp"/>
+
+
+
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
