updated main menu and log menu, questionnaire, settings, profile details
set buttons to open their respective activities

--- a/app/src/main/res/layout/profile_details.xml
+++ b/app/src/main/res/layout/profile_details.xml
@@ -160,7 +160,8 @@
                     android:backgroundTint="#2DE160"
                     android:bottomLeftRadius="10dp"
                     android:bottomRightRadius="10dp"
-                    android:text="SAVE CHANGES"
+                    android:text="Save Changes"
+                    android:textAllCaps="false"
                     android:textSize="20dp"
                     android:topLeftRadius="10dp"
                     android:topRightRadius="10dp"
@@ -179,7 +180,8 @@
                     android:backgroundTint="#FF0909"
                     android:bottomLeftRadius="10dp"
                     android:bottomRightRadius="10dp"
-                    android:text="CANCEL"
+                    android:text="Cancel"
+                    android:textAllCaps="false"
                     android:textSize="20dp"
                     android:topLeftRadius="10dp"
                     android:topRightRadius="10dp"
