--- a/app/src/main/res/layout/questoinnaire.xml
+++ b/app/src/main/res/layout/questoinnaire.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".Questoinnaire">
+    tools:context=".Questionnaire">
 
     <ImageView
         android:id="@+id/logoView"
@@ -186,11 +186,14 @@
                 <EditText
                     android:id="@+id/typeSympNotes"
                     android:layout_width="match_parent"
-                    android:layout_height="90dp"
+                    android:layout_height="100dp"
                     android:layout_marginTop="4dp"
-                    android:background="@drawable/roundbutton"
+                    android:background="@drawable/textbox"
                     android:backgroundTint="@color/colorNeutralWhite"
                     android:inputType="text"
+                    android:paddingStart="10dp"
+                    android:paddingTop="1dp"
+                    android:paddingBottom="40dp"
                     android:textColor="#000000"
                     android:textColorHighlight="#000000"
                     android:textColorHint="#000000"
