--- a/app/src/main/res/layout/signup1.xml
+++ b/app/src/main/res/layout/signup1.xml
@@ -41,7 +41,6 @@
         android:id="@+id/firstNameField"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="48dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="First Name"
@@ -50,19 +49,18 @@
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.017"
+        app:layout_constraintVertical_bias="0.06"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/lastNameField"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Last Name"
@@ -71,19 +69,18 @@
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstNameField"
-        app:layout_constraintVertical_bias="0.017"
+        app:layout_constraintVertical_bias="0.03"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/passwordField"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Password"
@@ -92,19 +89,18 @@
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lastNameField"
-        app:layout_constraintVertical_bias="0.056"
+        app:layout_constraintVertical_bias="0.03"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/emailField"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Email"
@@ -113,19 +109,38 @@
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordField"
-        app:layout_constraintVertical_bias="0.056"
+        app:layout_constraintVertical_bias="0.038"
+        tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/nhsnumber"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
+        android:background="@drawable/roundbutton"
+        android:backgroundTint="#FFFFFF"
+        android:hint="NHS number"
+        android:inputType="phone"
+        android:padding="15dp"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phoneField"
+        app:layout_constraintVertical_bias="0.08"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/phoneField"
         android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FFFFFF"
         android:hint="Phone Number"
@@ -134,12 +149,12 @@
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailField"
-        app:layout_constraintVertical_bias="0.056"
+        app:layout_constraintVertical_bias="0.055"
         tools:ignore="MissingConstraints" />
 
     <Button
@@ -157,17 +172,17 @@
         android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.88"
+        app:layout_constraintHorizontal_bias="0.845"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.891" />
+        app:layout_constraintVertical_bias="0.92" />
 
     <Button
         android:id="@+id/backBtn"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="28dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="#FF0909"
         android:bottomLeftRadius="10dp"
@@ -181,7 +196,21 @@
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.891" />
+        app:layout_constraintVertical_bias="0.92" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="84dp"
+        android:layout_height="80dp"
+        android:indeterminateTint="#FFFFFF"
+        android:secondaryProgressTint="#225324"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nhsnumber"
+        app:layout_constraintVertical_bias="0.2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
